--- a/PokemonStore/PokemonStore.Web/Views/Shared/_Layout.cshtml
+++ b/PokemonStore/PokemonStore.Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,10 @@
                         <a href="./order">Order Pokemon</a>
                     </li>
                     <li>
-                        <a href="./ordersfeed">List of orders of Pokemons</a>
+                        <a href="./ordersfeed">Orders Feed</a>
+                    </li>
+                    <li>
+                        <a href="./orderslist">Orders List</a>
                     </li>
                 </ul>
             </nav>
