--- a/PokemonStore/PokemonStore.Web/Views/Shared/_Layout.cshtml
+++ b/PokemonStore/PokemonStore.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
             <nav class="collapse navbar-collapse spa-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav">
                     <li>
+                        <a href="./">Order Pokemon</a>
+                    </li>
+                    <li>
                         <a href="./ordersfeed">Orders Feed</a>
                     </li>
                     <li>
